Fix username spacing in home

--- a/src/components/layout/navbar.module.scss
+++ b/src/components/layout/navbar.module.scss
@@ -43,6 +43,8 @@ img {
     .cur_user {
       font-size: 15px;
       color: grey;
+      padding-left: 3px;
+      padding-bottom: 4px;
     }
   }
 }
